crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__error_trailing_comma.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(1, 2,)"
---
Tuple(
    Expr(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
