crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__error_unclosed.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(1, 2"
---
Tuple(
    End(
        1,
        6,
    ),
    1,
    1,
)
