crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__multiline.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code (indented inside a def):\n\n    (\n        1,\n        2,\n        3\n    )\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 5,
            column: 6,
        },
    },
    value: Tuple {
        first: Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 9,
                },
                end: Position {
                    line: 2,
                    column: 10,
                },
            },
            value: Int(
                1,
            ),
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 9,
                },
                end: Position {
                    line: 3,
                    column: 10,
                },
            },
            value: Int(
                2,
            ),
        },
        rest: [
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 9,
                    },
                    end: Position {
                        line: 4,
                        column: 10,
                    },
                },
                value: Int(
                    3,
                ),
            },
        ],
    },
}
