crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__nested_list.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n([1, 2], [3, 4])"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: Tuple(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: List(
                [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 3,
                            },
                            end: Position {
                                line: 1,
                                column: 4,
                            },
                        },
                        value: Int(
                            1,
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 7,
                            },
                        },
                        value: Int(
                            2,
                        ),
                    },
                ],
            ),
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 10,
                },
                end: Position {
                    line: 1,
                    column: 16,
                },
            },
            value: List(
                [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 11,
                            },
                            end: Position {
                                line: 1,
                                column: 12,
                            },
                        },
                        value: Int(
                            3,
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 15,
                            },
                        },
                        value: Int(
                            4,
                        ),
                    },
                ],
            ),
        },
        [],
    ),
}
