crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__pair.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(1, 2)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Tuple {
        first: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Int(
                1,
            ),
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: Int(
                2,
            ),
        },
        rest: [],
    },
}
