crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__parenthesized_var.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(foo)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 2,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Var {
        kind: LowVar,
        name: "foo",
    },
}
