crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__triple.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(1, 2, 3)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Tuple(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Int(
                1,
            ),
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: Int(
                2,
            ),
        },
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Int(
                    3,
                ),
            },
        ],
    ),
}
