crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__unit.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n()"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Unit,
}
